@@ -32,6 +32,7 @@ PROCEDURE StartFile (filename: ADDRESS; linebegin: CARDINAL) ;
 PROCEDURE EndFile ;
 PROCEDURE StartLine (linenumber: CARDINAL; linesize: CARDINAL) ;
 PROCEDURE GetLocationColumn (column: CARDINAL) : location_t ;
+PROCEDURE GetLocationRange (start, end: CARDINAL) : location_t ;
 
 PROCEDURE UnknownLocation () : location_t ;
 PROCEDURE BuiltinsLocation () : location_t ;
