@@ -36,15 +36,17 @@ along with GNU Modula-2; see the file COPYING3.  If not see
 #   define START_FILE(F,L)
 #   define END_FILE()
 #   define START_LINE(N,S)
-#   define GET_LOCATION(C)   0
+#   define GET_LOCATION(COLUMN_START,COLUMN_END)   0
 #   define TIMEVAR_PUSH_LEX
 #   define TIMEVAR_POP_LEX
 #else
 #   include "timevar.h"
+
 #   define START_FILE(F,L)   m2linemap_StartFile(F,L)
 #   define END_FILE()        m2linemap_EndFile()
 #   define START_LINE(N,S)   m2linemap_StartLine(N,S)
-#   define GET_LOCATION(C)   m2linemap_GetLocationColumn(C)
+#   define GET_LOCATION(COLUMN_START,COLUMN_END) \
+           m2linemap_GetLocationRange(COLUMN_START,COLUMN_END)
 #   define TIMEVAR_PUSH_LEX  timevar_push (TV_LEX)
 #   define TIMEVAR_POP_LEX   timevar_pop (TV_LEX)
 #endif
@@ -527,8 +529,11 @@ static void updatepos (void)
   currentLine->toklen  = yyleng;
   if (currentLine->column == 0)
     currentLine->column = currentLine->tokenpos;
-  currentLine->location = M2Options_OverrideLocation (GET_LOCATION (currentLine->column));
-  assert_location (GET_LOCATION (currentLine->column));
+  currentLine->location =
+    M2Options_OverrideLocation (GET_LOCATION (currentLine->column,
+                                              currentLine->column+currentLine->toklen));
+  assert_location (GET_LOCATION (currentLine->column,
+                                 currentLine->column+currentLine->toklen));
 }
 
 /*
